--- a/RPG_Game.CSharp.csproj
+++ b/RPG_Game.CSharp.csproj
@@ -68,7 +68,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\PlayerMotor.cs" />
+    <Compile Include="Assets\Scripts\Camera\CameraFollow2D.cs" />
+    <Compile Include="Assets\Scripts\Locomotion\PlayerMotor.cs" />
     <Compile Include="Assets\Scripts\SpriteControl\RandomSprite.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
