--- a/RPG_Game.CSharp.csproj
+++ b/RPG_Game.CSharp.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Assets\Scripts\Camera\CameraFollow2D.cs" />
     <Compile Include="Assets\Scripts\Locomotion\PlayerMotor.cs" />
     <Compile Include="Assets\Scripts\SpriteControl\RandomSprite.cs" />
+    <Compile Include="Assets\Scripts\UI\UIHealthBar.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
